# shuf-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
src/: main.rs  shuf.rs
