[package]
name = "shuf"
version = "0.2.0"
authors = ["Gabriele Modena <gmodena@pm.me>"]
edition = "2021"
description = "Generate random permutations of an iterable with reservior sampling"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gmodena/shuf-rs/"
repository = "https://github.com/gmodena/shuf-rs/"
categories = ["command-line-utilities"]
exclude = [".github/*"]

[dependencies]
rand = "0.8.5"
structopt = { version = "0.3.26", default-features = false }
